// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`telepath: wagtail.blocks.ListBlock blocks can be duplicated 1`] = `
"<span>
          <div class=\\"help\\">
            <div class=\\"icon-help\\">?</div>
            use <strong>a few</strong> of these
          </div>
        </span><div class=\\"c-sf-container \\">
        <input type=\\"hidden\\" name=\\"the-prefix-count\\" data-streamfield-list-count=\\"\\" value=\\"3\\">

        <div data-streamfield-list-container=\\"\\"><button type=\\"button\\" title=\\"Add\\" data-streamfield-list-add=\\"\\" class=\\"c-sf-add-button c-sf-add-button--visible\\">
        <i aria-hidden=\\"true\\">+</i>
      </button><div aria-hidden=\\"false\\" data-contentpath=\\"11111111-1111-1111-1111-111111111111\\">
        <input type=\\"hidden\\" name=\\"the-prefix-0-deleted\\" value=\\"\\">
        <input type=\\"hidden\\" name=\\"the-prefix-0-order\\" value=\\"0\\">
        <input type=\\"hidden\\" name=\\"the-prefix-0-type\\" value=\\"\\">
        <input type=\\"hidden\\" name=\\"the-prefix-0-id\\" value=\\"11111111-1111-1111-1111-111111111111\\">

        <div>
          <div class=\\"c-sf-container__block-container\\">
            <div class=\\"c-sf-block\\">
              <div data-block-header=\\"\\" class=\\"c-sf-block__header c-sf-block__header--collapsible\\">
                <svg class=\\"icon icon-pilcrow c-sf-block__header__icon\\" aria-hidden=\\"true\\">
                  <use href=\\"#icon-pilcrow\\"></use>
                </svg>
                <h3 data-block-title=\\"\\" class=\\"c-sf-block__header__title\\"></h3>
                <div class=\\"c-sf-block__actions\\" data-block-actions=\\"\\">
                  <span class=\\"c-sf-block__type\\"></span>
                <button type=\\"button\\" class=\\"c-sf-block__actions__single\\" title=\\"Move up\\" disabled=\\"disabled\\">
        <svg class=\\"icon icon-arrow-up\\" aria-hidden=\\"true\\">
          <use href=\\"#icon-arrow-up\\"></use>
        </svg>
      </button><button type=\\"button\\" class=\\"c-sf-block__actions__single\\" title=\\"Move down\\">
        <svg class=\\"icon icon-arrow-down\\" aria-hidden=\\"true\\">
          <use href=\\"#icon-arrow-down\\"></use>
        </svg>
      </button><button type=\\"button\\" class=\\"c-sf-block__actions__single\\" title=\\"Duplicate\\">
        <svg class=\\"icon icon-duplicate\\" aria-hidden=\\"true\\">
          <use href=\\"#icon-duplicate\\"></use>
        </svg>
      </button><button type=\\"button\\" class=\\"c-sf-block__actions__single\\" title=\\"Delete\\">
        <svg class=\\"icon icon-bin\\" aria-hidden=\\"true\\">
          <use href=\\"#icon-bin\\"></use>
        </svg>
      </button></div>
              </div>
              <div data-block-content=\\"\\" class=\\"c-sf-block__content\\" aria-hidden=\\"false\\">
                <div class=\\"c-sf-block__content-inner\\">
                  <div class=\\"field char_field widget-admin_auto_height_text_input fieldname-\\">
        <div class=\\"field-content\\">
          <div class=\\"input\\">
            <p name=\\"the-prefix-0-value\\" id=\\"the-prefix-0-value\\">The widget</p>
            <span></span>
          </div>
        </div>
      </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div><button type=\\"button\\" title=\\"Add\\" data-streamfield-list-add=\\"\\" class=\\"c-sf-add-button c-sf-add-button--visible\\">
        <i aria-hidden=\\"true\\">+</i>
      </button><div aria-hidden=\\"false\\" data-contentpath=\\"22222222-2222-2222-2222-222222222222\\">
        <input type=\\"hidden\\" name=\\"the-prefix-1-deleted\\" value=\\"\\">
        <input type=\\"hidden\\" name=\\"the-prefix-1-order\\" value=\\"1\\">
        <input type=\\"hidden\\" name=\\"the-prefix-1-type\\" value=\\"\\">
        <input type=\\"hidden\\" name=\\"the-prefix-1-id\\" value=\\"22222222-2222-2222-2222-222222222222\\">

        <div>
          <div class=\\"c-sf-container__block-container\\">
            <div class=\\"c-sf-block\\">
              <div data-block-header=\\"\\" class=\\"c-sf-block__header c-sf-block__header--collapsible\\">
                <svg class=\\"icon icon-pilcrow c-sf-block__header__icon\\" aria-hidden=\\"true\\">
                  <use href=\\"#icon-pilcrow\\"></use>
                </svg>
                <h3 data-block-title=\\"\\" class=\\"c-sf-block__header__title\\"></h3>
                <div class=\\"c-sf-block__actions\\" data-block-actions=\\"\\">
                  <span class=\\"c-sf-block__type\\"></span>
                <button type=\\"button\\" class=\\"c-sf-block__actions__single\\" title=\\"Move up\\">
        <svg class=\\"icon icon-arrow-up\\" aria-hidden=\\"true\\">
          <use href=\\"#icon-arrow-up\\"></use>
        </svg>
      </button><button type=\\"button\\" class=\\"c-sf-block__actions__single\\" title=\\"Move down\\">
        <svg class=\\"icon icon-arrow-down\\" aria-hidden=\\"true\\">
          <use href=\\"#icon-arrow-down\\"></use>
        </svg>
      </button><button type=\\"button\\" class=\\"c-sf-block__actions__single\\" title=\\"Duplicate\\">
        <svg class=\\"icon icon-duplicate\\" aria-hidden=\\"true\\">
          <use href=\\"#icon-duplicate\\"></use>
        </svg>
      </button><button type=\\"button\\" class=\\"c-sf-block__actions__single\\" title=\\"Delete\\">
        <svg class=\\"icon icon-bin\\" aria-hidden=\\"true\\">
          <use href=\\"#icon-bin\\"></use>
        </svg>
      </button></div>
              </div>
              <div data-block-content=\\"\\" class=\\"c-sf-block__content\\" aria-hidden=\\"false\\">
                <div class=\\"c-sf-block__content-inner\\">
                  <div class=\\"field char_field widget-admin_auto_height_text_input fieldname-\\">
        <div class=\\"field-content\\">
          <div class=\\"input\\">
            <p name=\\"the-prefix-1-value\\" id=\\"the-prefix-1-value\\">The widget</p>
            <span></span>
          </div>
        </div>
      </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div><button type=\\"button\\" title=\\"Add\\" data-streamfield-list-add=\\"\\" class=\\"c-sf-add-button c-sf-add-button--visible\\">
        <i aria-hidden=\\"true\\">+</i>
      </button><div aria-hidden=\\"false\\" data-contentpath-disabled=\\"\\">
        <input type=\\"hidden\\" name=\\"the-prefix-2-deleted\\" value=\\"\\">
        <input type=\\"hidden\\" name=\\"the-prefix-2-order\\" value=\\"2\\">
        <input type=\\"hidden\\" name=\\"the-prefix-2-type\\" value=\\"\\">
        <input type=\\"hidden\\" name=\\"the-prefix-2-id\\" value=\\"\\">

        <div>
          <div class=\\"c-sf-container__block-container\\">
            <div class=\\"c-sf-block\\">
              <div data-block-header=\\"\\" class=\\"c-sf-block__header c-sf-block__header--collapsible\\">
                <svg class=\\"icon icon-pilcrow c-sf-block__header__icon\\" aria-hidden=\\"true\\">
                  <use href=\\"#icon-pilcrow\\"></use>
                </svg>
                <h3 data-block-title=\\"\\" class=\\"c-sf-block__header__title\\"></h3>
                <div class=\\"c-sf-block__actions\\" data-block-actions=\\"\\">
                  <span class=\\"c-sf-block__type\\"></span>
                <button type=\\"button\\" class=\\"c-sf-block__actions__single\\" title=\\"Move up\\">
        <svg class=\\"icon icon-arrow-up\\" aria-hidden=\\"true\\">
          <use href=\\"#icon-arrow-up\\"></use>
        </svg>
      </button><button type=\\"button\\" class=\\"c-sf-block__actions__single\\" title=\\"Move down\\" disabled=\\"disabled\\">
        <svg class=\\"icon icon-arrow-down\\" aria-hidden=\\"true\\">
          <use href=\\"#icon-arrow-down\\"></use>
        </svg>
      </button><button type=\\"button\\" class=\\"c-sf-block__actions__single\\" title=\\"Duplicate\\">
        <svg class=\\"icon icon-duplicate\\" aria-hidden=\\"true\\">
          <use href=\\"#icon-duplicate\\"></use>
        </svg>
      </button><button type=\\"button\\" class=\\"c-sf-block__actions__single\\" title=\\"Delete\\">
        <svg class=\\"icon icon-bin\\" aria-hidden=\\"true\\">
          <use href=\\"#icon-bin\\"></use>
        </svg>
      </button></div>
              </div>
              <div data-block-content=\\"\\" class=\\"c-sf-block__content\\" aria-hidden=\\"false\\">
                <div class=\\"c-sf-block__content-inner\\">
                  <div class=\\"field char_field widget-admin_auto_height_text_input fieldname-\\">
        <div class=\\"field-content\\">
          <div class=\\"input\\">
            <p name=\\"the-prefix-2-value\\" id=\\"the-prefix-2-value\\">The widget</p>
            <span></span>
          </div>
        </div>
      </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div><button type=\\"button\\" title=\\"Add\\" data-streamfield-list-add=\\"\\" class=\\"c-sf-add-button c-sf-add-button--visible\\">
        <i aria-hidden=\\"true\\">+</i>
      </button></div>
      </div>"
`;

exports[`telepath: wagtail.blocks.ListBlock blocks can be reordered downward 1`] = `
"<span>
          <div class=\\"help\\">
            <div class=\\"icon-help\\">?</div>
            use <strong>a few</strong> of these
          </div>
        </span><div class=\\"c-sf-container \\">
        <input type=\\"hidden\\" name=\\"the-prefix-count\\" data-streamfield-list-count=\\"\\" value=\\"2\\">

        <div data-streamfield-list-container=\\"\\"><button type=\\"button\\" title=\\"Add\\" data-streamfield-list-add=\\"\\" class=\\"c-sf-add-button c-sf-add-button--visible\\">
        <i aria-hidden=\\"true\\">+</i>
      </button><div aria-hidden=\\"false\\" data-contentpath=\\"22222222-2222-2222-2222-222222222222\\">
        <input type=\\"hidden\\" name=\\"the-prefix-1-deleted\\" value=\\"\\">
        <input type=\\"hidden\\" name=\\"the-prefix-1-order\\" value=\\"0\\">
        <input type=\\"hidden\\" name=\\"the-prefix-1-type\\" value=\\"\\">
        <input type=\\"hidden\\" name=\\"the-prefix-1-id\\" value=\\"22222222-2222-2222-2222-222222222222\\">

        <div>
          <div class=\\"c-sf-container__block-container\\">
            <div class=\\"c-sf-block\\">
              <div data-block-header=\\"\\" class=\\"c-sf-block__header c-sf-block__header--collapsible\\">
                <svg class=\\"icon icon-pilcrow c-sf-block__header__icon\\" aria-hidden=\\"true\\">
                  <use href=\\"#icon-pilcrow\\"></use>
                </svg>
                <h3 data-block-title=\\"\\" class=\\"c-sf-block__header__title\\"></h3>
                <div class=\\"c-sf-block__actions\\" data-block-actions=\\"\\">
                  <span class=\\"c-sf-block__type\\"></span>
                <button type=\\"button\\" class=\\"c-sf-block__actions__single\\" title=\\"Move up\\" disabled=\\"disabled\\">
        <svg class=\\"icon icon-arrow-up\\" aria-hidden=\\"true\\">
          <use href=\\"#icon-arrow-up\\"></use>
        </svg>
      </button><button type=\\"button\\" class=\\"c-sf-block__actions__single\\" title=\\"Move down\\">
        <svg class=\\"icon icon-arrow-down\\" aria-hidden=\\"true\\">
          <use href=\\"#icon-arrow-down\\"></use>
        </svg>
      </button><button type=\\"button\\" class=\\"c-sf-block__actions__single\\" title=\\"Duplicate\\">
        <svg class=\\"icon icon-duplicate\\" aria-hidden=\\"true\\">
          <use href=\\"#icon-duplicate\\"></use>
        </svg>
      </button><button type=\\"button\\" class=\\"c-sf-block__actions__single\\" title=\\"Delete\\">
        <svg class=\\"icon icon-bin\\" aria-hidden=\\"true\\">
          <use href=\\"#icon-bin\\"></use>
        </svg>
      </button></div>
              </div>
              <div data-block-content=\\"\\" class=\\"c-sf-block__content\\" aria-hidden=\\"false\\">
                <div class=\\"c-sf-block__content-inner\\">
                  <div class=\\"field char_field widget-admin_auto_height_text_input fieldname-\\">
        <div class=\\"field-content\\">
          <div class=\\"input\\">
            <p name=\\"the-prefix-1-value\\" id=\\"the-prefix-1-value\\">The widget</p>
            <span></span>
          </div>
        </div>
      </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div><button type=\\"button\\" title=\\"Add\\" data-streamfield-list-add=\\"\\" class=\\"c-sf-add-button c-sf-add-button--visible\\">
        <i aria-hidden=\\"true\\">+</i>
      </button><div aria-hidden=\\"false\\" data-contentpath=\\"11111111-1111-1111-1111-111111111111\\">
        <input type=\\"hidden\\" name=\\"the-prefix-0-deleted\\" value=\\"\\">
        <input type=\\"hidden\\" name=\\"the-prefix-0-order\\" value=\\"1\\">
        <input type=\\"hidden\\" name=\\"the-prefix-0-type\\" value=\\"\\">
        <input type=\\"hidden\\" name=\\"the-prefix-0-id\\" value=\\"11111111-1111-1111-1111-111111111111\\">

        <div>
          <div class=\\"c-sf-container__block-container\\">
            <div class=\\"c-sf-block\\">
              <div data-block-header=\\"\\" class=\\"c-sf-block__header c-sf-block__header--collapsible\\">
                <svg class=\\"icon icon-pilcrow c-sf-block__header__icon\\" aria-hidden=\\"true\\">
                  <use href=\\"#icon-pilcrow\\"></use>
                </svg>
                <h3 data-block-title=\\"\\" class=\\"c-sf-block__header__title\\"></h3>
                <div class=\\"c-sf-block__actions\\" data-block-actions=\\"\\">
                  <span class=\\"c-sf-block__type\\"></span>
                <button type=\\"button\\" class=\\"c-sf-block__actions__single\\" title=\\"Move up\\">
        <svg class=\\"icon icon-arrow-up\\" aria-hidden=\\"true\\">
          <use href=\\"#icon-arrow-up\\"></use>
        </svg>
      </button><button type=\\"button\\" class=\\"c-sf-block__actions__single\\" title=\\"Move down\\" disabled=\\"disabled\\">
        <svg class=\\"icon icon-arrow-down\\" aria-hidden=\\"true\\">
          <use href=\\"#icon-arrow-down\\"></use>
        </svg>
      </button><button type=\\"button\\" class=\\"c-sf-block__actions__single\\" title=\\"Duplicate\\">
        <svg class=\\"icon icon-duplicate\\" aria-hidden=\\"true\\">
          <use href=\\"#icon-duplicate\\"></use>
        </svg>
      </button><button type=\\"button\\" class=\\"c-sf-block__actions__single\\" title=\\"Delete\\">
        <svg class=\\"icon icon-bin\\" aria-hidden=\\"true\\">
          <use href=\\"#icon-bin\\"></use>
        </svg>
      </button></div>
              </div>
              <div data-block-content=\\"\\" class=\\"c-sf-block__content\\" aria-hidden=\\"false\\">
                <div class=\\"c-sf-block__content-inner\\">
                  <div class=\\"field char_field widget-admin_auto_height_text_input fieldname-\\">
        <div class=\\"field-content\\">
          <div class=\\"input\\">
            <p name=\\"the-prefix-0-value\\" id=\\"the-prefix-0-value\\">The widget</p>
            <span></span>
          </div>
        </div>
      </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div><button type=\\"button\\" title=\\"Add\\" data-streamfield-list-add=\\"\\" class=\\"c-sf-add-button c-sf-add-button--visible\\">
        <i aria-hidden=\\"true\\">+</i>
      </button></div>
      </div>"
`;

exports[`telepath: wagtail.blocks.ListBlock blocks can be reordered upward 1`] = `
"<span>
          <div class=\\"help\\">
            <div class=\\"icon-help\\">?</div>
            use <strong>a few</strong> of these
          </div>
        </span><div class=\\"c-sf-container \\">
        <input type=\\"hidden\\" name=\\"the-prefix-count\\" data-streamfield-list-count=\\"\\" value=\\"2\\">

        <div data-streamfield-list-container=\\"\\"><button type=\\"button\\" title=\\"Add\\" data-streamfield-list-add=\\"\\" class=\\"c-sf-add-button c-sf-add-button--visible\\">
        <i aria-hidden=\\"true\\">+</i>
      </button><div aria-hidden=\\"false\\" data-contentpath=\\"22222222-2222-2222-2222-222222222222\\">
        <input type=\\"hidden\\" name=\\"the-prefix-1-deleted\\" value=\\"\\">
        <input type=\\"hidden\\" name=\\"the-prefix-1-order\\" value=\\"0\\">
        <input type=\\"hidden\\" name=\\"the-prefix-1-type\\" value=\\"\\">
        <input type=\\"hidden\\" name=\\"the-prefix-1-id\\" value=\\"22222222-2222-2222-2222-222222222222\\">

        <div>
          <div class=\\"c-sf-container__block-container\\">
            <div class=\\"c-sf-block\\">
              <div data-block-header=\\"\\" class=\\"c-sf-block__header c-sf-block__header--collapsible\\">
                <svg class=\\"icon icon-pilcrow c-sf-block__header__icon\\" aria-hidden=\\"true\\">
                  <use href=\\"#icon-pilcrow\\"></use>
                </svg>
                <h3 data-block-title=\\"\\" class=\\"c-sf-block__header__title\\"></h3>
                <div class=\\"c-sf-block__actions\\" data-block-actions=\\"\\">
                  <span class=\\"c-sf-block__type\\"></span>
                <button type=\\"button\\" class=\\"c-sf-block__actions__single\\" title=\\"Move up\\" disabled=\\"disabled\\">
        <svg class=\\"icon icon-arrow-up\\" aria-hidden=\\"true\\">
          <use href=\\"#icon-arrow-up\\"></use>
        </svg>
      </button><button type=\\"button\\" class=\\"c-sf-block__actions__single\\" title=\\"Move down\\">
        <svg class=\\"icon icon-arrow-down\\" aria-hidden=\\"true\\">
          <use href=\\"#icon-arrow-down\\"></use>
        </svg>
      </button><button type=\\"button\\" class=\\"c-sf-block__actions__single\\" title=\\"Duplicate\\">
        <svg class=\\"icon icon-duplicate\\" aria-hidden=\\"true\\">
          <use href=\\"#icon-duplicate\\"></use>
        </svg>
      </button><button type=\\"button\\" class=\\"c-sf-block__actions__single\\" title=\\"Delete\\">
        <svg class=\\"icon icon-bin\\" aria-hidden=\\"true\\">
          <use href=\\"#icon-bin\\"></use>
        </svg>
      </button></div>
              </div>
              <div data-block-content=\\"\\" class=\\"c-sf-block__content\\" aria-hidden=\\"false\\">
                <div class=\\"c-sf-block__content-inner\\">
                  <div class=\\"field char_field widget-admin_auto_height_text_input fieldname-\\">
        <div class=\\"field-content\\">
          <div class=\\"input\\">
            <p name=\\"the-prefix-1-value\\" id=\\"the-prefix-1-value\\">The widget</p>
            <span></span>
          </div>
        </div>
      </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div><button type=\\"button\\" title=\\"Add\\" data-streamfield-list-add=\\"\\" class=\\"c-sf-add-button c-sf-add-button--visible\\">
        <i aria-hidden=\\"true\\">+</i>
      </button><div aria-hidden=\\"false\\" data-contentpath=\\"11111111-1111-1111-1111-111111111111\\">
        <input type=\\"hidden\\" name=\\"the-prefix-0-deleted\\" value=\\"\\">
        <input type=\\"hidden\\" name=\\"the-prefix-0-order\\" value=\\"1\\">
        <input type=\\"hidden\\" name=\\"the-prefix-0-type\\" value=\\"\\">
        <input type=\\"hidden\\" name=\\"the-prefix-0-id\\" value=\\"11111111-1111-1111-1111-111111111111\\">

        <div>
          <div class=\\"c-sf-container__block-container\\">
            <div class=\\"c-sf-block\\">
              <div data-block-header=\\"\\" class=\\"c-sf-block__header c-sf-block__header--collapsible\\">
                <svg class=\\"icon icon-pilcrow c-sf-block__header__icon\\" aria-hidden=\\"true\\">
                  <use href=\\"#icon-pilcrow\\"></use>
                </svg>
                <h3 data-block-title=\\"\\" class=\\"c-sf-block__header__title\\"></h3>
                <div class=\\"c-sf-block__actions\\" data-block-actions=\\"\\">
                  <span class=\\"c-sf-block__type\\"></span>
                <button type=\\"button\\" class=\\"c-sf-block__actions__single\\" title=\\"Move up\\">
        <svg class=\\"icon icon-arrow-up\\" aria-hidden=\\"true\\">
          <use href=\\"#icon-arrow-up\\"></use>
        </svg>
      </button><button type=\\"button\\" class=\\"c-sf-block__actions__single\\" title=\\"Move down\\" disabled=\\"disabled\\">
        <svg class=\\"icon icon-arrow-down\\" aria-hidden=\\"true\\">
          <use href=\\"#icon-arrow-down\\"></use>
        </svg>
      </button><button type=\\"button\\" class=\\"c-sf-block__actions__single\\" title=\\"Duplicate\\">
        <svg class=\\"icon icon-duplicate\\" aria-hidden=\\"true\\">
          <use href=\\"#icon-duplicate\\"></use>
        </svg>
      </button><button type=\\"button\\" class=\\"c-sf-block__actions__single\\" title=\\"Delete\\">
        <svg class=\\"icon icon-bin\\" aria-hidden=\\"true\\">
          <use href=\\"#icon-bin\\"></use>
        </svg>
      </button></div>
              </div>
              <div data-block-content=\\"\\" class=\\"c-sf-block__content\\" aria-hidden=\\"false\\">
                <div class=\\"c-sf-block__content-inner\\">
                  <div class=\\"field char_field widget-admin_auto_height_text_input fieldname-\\">
        <div class=\\"field-content\\">
          <div class=\\"input\\">
            <p name=\\"the-prefix-0-value\\" id=\\"the-prefix-0-value\\">The widget</p>
            <span></span>
          </div>
        </div>
      </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div><button type=\\"button\\" title=\\"Add\\" data-streamfield-list-add=\\"\\" class=\\"c-sf-add-button c-sf-add-button--visible\\">
        <i aria-hidden=\\"true\\">+</i>
      </button></div>
      </div>"
`;

exports[`telepath: wagtail.blocks.ListBlock blocks can be split 1`] = `
"<span>
          <div class=\\"help\\">
            <div class=\\"icon-help\\">?</div>
            use <strong>a few</strong> of these
          </div>
        </span><div class=\\"c-sf-container \\">
        <input type=\\"hidden\\" name=\\"the-prefix-count\\" data-streamfield-list-count=\\"\\" value=\\"3\\">

        <div data-streamfield-list-container=\\"\\"><button type=\\"button\\" title=\\"Add\\" data-streamfield-list-add=\\"\\" class=\\"c-sf-add-button c-sf-add-button--visible\\">
        <i aria-hidden=\\"true\\">+</i>
      </button><div aria-hidden=\\"false\\" data-contentpath=\\"11111111-1111-1111-1111-111111111111\\">
        <input type=\\"hidden\\" name=\\"the-prefix-0-deleted\\" value=\\"\\">
        <input type=\\"hidden\\" name=\\"the-prefix-0-order\\" value=\\"0\\">
        <input type=\\"hidden\\" name=\\"the-prefix-0-type\\" value=\\"\\">
        <input type=\\"hidden\\" name=\\"the-prefix-0-id\\" value=\\"11111111-1111-1111-1111-111111111111\\">

        <div>
          <div class=\\"c-sf-container__block-container\\">
            <div class=\\"c-sf-block\\">
              <div data-block-header=\\"\\" class=\\"c-sf-block__header c-sf-block__header--collapsible\\">
                <svg class=\\"icon icon-pilcrow c-sf-block__header__icon\\" aria-hidden=\\"true\\">
                  <use href=\\"#icon-pilcrow\\"></use>
                </svg>
                <h3 data-block-title=\\"\\" class=\\"c-sf-block__header__title\\"></h3>
                <div class=\\"c-sf-block__actions\\" data-block-actions=\\"\\">
                  <span class=\\"c-sf-block__type\\"></span>
                <button type=\\"button\\" class=\\"c-sf-block__actions__single\\" title=\\"Move up\\" disabled=\\"disabled\\">
        <svg class=\\"icon icon-arrow-up\\" aria-hidden=\\"true\\">
          <use href=\\"#icon-arrow-up\\"></use>
        </svg>
      </button><button type=\\"button\\" class=\\"c-sf-block__actions__single\\" title=\\"Move down\\">
        <svg class=\\"icon icon-arrow-down\\" aria-hidden=\\"true\\">
          <use href=\\"#icon-arrow-down\\"></use>
        </svg>
      </button><button type=\\"button\\" class=\\"c-sf-block__actions__single\\" title=\\"Duplicate\\">
        <svg class=\\"icon icon-duplicate\\" aria-hidden=\\"true\\">
          <use href=\\"#icon-duplicate\\"></use>
        </svg>
      </button><button type=\\"button\\" class=\\"c-sf-block__actions__single\\" title=\\"Delete\\">
        <svg class=\\"icon icon-bin\\" aria-hidden=\\"true\\">
          <use href=\\"#icon-bin\\"></use>
        </svg>
      </button></div>
              </div>
              <div data-block-content=\\"\\" class=\\"c-sf-block__content\\" aria-hidden=\\"false\\">
                <div class=\\"c-sf-block__content-inner\\">
                  <div class=\\"field char_field widget-admin_auto_height_text_input fieldname-\\">
        <div class=\\"field-content\\">
          <div class=\\"input\\">
            <p name=\\"the-prefix-0-value\\" id=\\"the-prefix-0-value\\">The widget</p>
            <span></span>
          </div>
        </div>
      </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div><button type=\\"button\\" title=\\"Add\\" data-streamfield-list-add=\\"\\" class=\\"c-sf-add-button c-sf-add-button--visible\\">
        <i aria-hidden=\\"true\\">+</i>
      </button><div aria-hidden=\\"false\\" data-contentpath-disabled=\\"\\">
        <input type=\\"hidden\\" name=\\"the-prefix-2-deleted\\" value=\\"\\">
        <input type=\\"hidden\\" name=\\"the-prefix-2-order\\" value=\\"1\\">
        <input type=\\"hidden\\" name=\\"the-prefix-2-type\\" value=\\"\\">
        <input type=\\"hidden\\" name=\\"the-prefix-2-id\\" value=\\"\\">

        <div>
          <div class=\\"c-sf-container__block-container\\">
            <div class=\\"c-sf-block\\">
              <div data-block-header=\\"\\" class=\\"c-sf-block__header c-sf-block__header--collapsible\\">
                <svg class=\\"icon icon-pilcrow c-sf-block__header__icon\\" aria-hidden=\\"true\\">
                  <use href=\\"#icon-pilcrow\\"></use>
                </svg>
                <h3 data-block-title=\\"\\" class=\\"c-sf-block__header__title\\"></h3>
                <div class=\\"c-sf-block__actions\\" data-block-actions=\\"\\">
                  <span class=\\"c-sf-block__type\\"></span>
                <button type=\\"button\\" class=\\"c-sf-block__actions__single\\" title=\\"Move up\\">
        <svg class=\\"icon icon-arrow-up\\" aria-hidden=\\"true\\">
          <use href=\\"#icon-arrow-up\\"></use>
        </svg>
      </button><button type=\\"button\\" class=\\"c-sf-block__actions__single\\" title=\\"Move down\\">
        <svg class=\\"icon icon-arrow-down\\" aria-hidden=\\"true\\">
          <use href=\\"#icon-arrow-down\\"></use>
        </svg>
      </button><button type=\\"button\\" class=\\"c-sf-block__actions__single\\" title=\\"Duplicate\\">
        <svg class=\\"icon icon-duplicate\\" aria-hidden=\\"true\\">
          <use href=\\"#icon-duplicate\\"></use>
        </svg>
      </button><button type=\\"button\\" class=\\"c-sf-block__actions__single\\" title=\\"Delete\\">
        <svg class=\\"icon icon-bin\\" aria-hidden=\\"true\\">
          <use href=\\"#icon-bin\\"></use>
        </svg>
      </button></div>
              </div>
              <div data-block-content=\\"\\" class=\\"c-sf-block__content\\" aria-hidden=\\"false\\">
                <div class=\\"c-sf-block__content-inner\\">
                  <div class=\\"field char_field widget-admin_auto_height_text_input fieldname-\\">
        <div class=\\"field-content\\">
          <div class=\\"input\\">
            <p name=\\"the-prefix-2-value\\" id=\\"the-prefix-2-value\\">The widget</p>
            <span></span>
          </div>
        </div>
      </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div><button type=\\"button\\" title=\\"Add\\" data-streamfield-list-add=\\"\\" class=\\"c-sf-add-button c-sf-add-button--visible\\">
        <i aria-hidden=\\"true\\">+</i>
      </button><div aria-hidden=\\"false\\" data-contentpath=\\"22222222-2222-2222-2222-222222222222\\">
        <input type=\\"hidden\\" name=\\"the-prefix-1-deleted\\" value=\\"\\">
        <input type=\\"hidden\\" name=\\"the-prefix-1-order\\" value=\\"2\\">
        <input type=\\"hidden\\" name=\\"the-prefix-1-type\\" value=\\"\\">
        <input type=\\"hidden\\" name=\\"the-prefix-1-id\\" value=\\"22222222-2222-2222-2222-222222222222\\">

        <div>
          <div class=\\"c-sf-container__block-container\\">
            <div class=\\"c-sf-block\\">
              <div data-block-header=\\"\\" class=\\"c-sf-block__header c-sf-block__header--collapsible\\">
                <svg class=\\"icon icon-pilcrow c-sf-block__header__icon\\" aria-hidden=\\"true\\">
                  <use href=\\"#icon-pilcrow\\"></use>
                </svg>
                <h3 data-block-title=\\"\\" class=\\"c-sf-block__header__title\\"></h3>
                <div class=\\"c-sf-block__actions\\" data-block-actions=\\"\\">
                  <span class=\\"c-sf-block__type\\"></span>
                <button type=\\"button\\" class=\\"c-sf-block__actions__single\\" title=\\"Move up\\">
        <svg class=\\"icon icon-arrow-up\\" aria-hidden=\\"true\\">
          <use href=\\"#icon-arrow-up\\"></use>
        </svg>
      </button><button type=\\"button\\" class=\\"c-sf-block__actions__single\\" title=\\"Move down\\" disabled=\\"disabled\\">
        <svg class=\\"icon icon-arrow-down\\" aria-hidden=\\"true\\">
          <use href=\\"#icon-arrow-down\\"></use>
        </svg>
      </button><button type=\\"button\\" class=\\"c-sf-block__actions__single\\" title=\\"Duplicate\\">
        <svg class=\\"icon icon-duplicate\\" aria-hidden=\\"true\\">
          <use href=\\"#icon-duplicate\\"></use>
        </svg>
      </button><button type=\\"button\\" class=\\"c-sf-block__actions__single\\" title=\\"Delete\\">
        <svg class=\\"icon icon-bin\\" aria-hidden=\\"true\\">
          <use href=\\"#icon-bin\\"></use>
        </svg>
      </button></div>
              </div>
              <div data-block-content=\\"\\" class=\\"c-sf-block__content\\" aria-hidden=\\"false\\">
                <div class=\\"c-sf-block__content-inner\\">
                  <div class=\\"field char_field widget-admin_auto_height_text_input fieldname-\\">
        <div class=\\"field-content\\">
          <div class=\\"input\\">
            <p name=\\"the-prefix-1-value\\" id=\\"the-prefix-1-value\\">The widget</p>
            <span></span>
          </div>
        </div>
      </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div><button type=\\"button\\" title=\\"Add\\" data-streamfield-list-add=\\"\\" class=\\"c-sf-add-button c-sf-add-button--visible\\">
        <i aria-hidden=\\"true\\">+</i>
      </button></div>
      </div>"
`;

exports[`telepath: wagtail.blocks.ListBlock deleteBlock() deletes a block 1`] = `
"<span>
          <div class=\\"help\\">
            <div class=\\"icon-help\\">?</div>
            use <strong>a few</strong> of these
          </div>
        </span><div class=\\"c-sf-container \\">
        <input type=\\"hidden\\" name=\\"the-prefix-count\\" data-streamfield-list-count=\\"\\" value=\\"2\\">

        <div data-streamfield-list-container=\\"\\"><button type=\\"button\\" title=\\"Add\\" data-streamfield-list-add=\\"\\" class=\\"c-sf-add-button c-sf-add-button--visible\\">
        <i aria-hidden=\\"true\\">+</i>
      </button><div aria-hidden=\\"false\\" data-contentpath=\\"11111111-1111-1111-1111-111111111111\\">
        <input type=\\"hidden\\" name=\\"the-prefix-0-deleted\\" value=\\"\\">
        <input type=\\"hidden\\" name=\\"the-prefix-0-order\\" value=\\"0\\">
        <input type=\\"hidden\\" name=\\"the-prefix-0-type\\" value=\\"\\">
        <input type=\\"hidden\\" name=\\"the-prefix-0-id\\" value=\\"11111111-1111-1111-1111-111111111111\\">

        <div>
          <div class=\\"c-sf-container__block-container\\">
            <div class=\\"c-sf-block\\">
              <div data-block-header=\\"\\" class=\\"c-sf-block__header c-sf-block__header--collapsible\\">
                <svg class=\\"icon icon-pilcrow c-sf-block__header__icon\\" aria-hidden=\\"true\\">
                  <use href=\\"#icon-pilcrow\\"></use>
                </svg>
                <h3 data-block-title=\\"\\" class=\\"c-sf-block__header__title\\"></h3>
                <div class=\\"c-sf-block__actions\\" data-block-actions=\\"\\">
                  <span class=\\"c-sf-block__type\\"></span>
                <button type=\\"button\\" class=\\"c-sf-block__actions__single\\" title=\\"Move up\\" disabled=\\"disabled\\">
        <svg class=\\"icon icon-arrow-up\\" aria-hidden=\\"true\\">
          <use href=\\"#icon-arrow-up\\"></use>
        </svg>
      </button><button type=\\"button\\" class=\\"c-sf-block__actions__single\\" title=\\"Move down\\" disabled=\\"disabled\\">
        <svg class=\\"icon icon-arrow-down\\" aria-hidden=\\"true\\">
          <use href=\\"#icon-arrow-down\\"></use>
        </svg>
      </button><button type=\\"button\\" class=\\"c-sf-block__actions__single\\" title=\\"Duplicate\\">
        <svg class=\\"icon icon-duplicate\\" aria-hidden=\\"true\\">
          <use href=\\"#icon-duplicate\\"></use>
        </svg>
      </button><button type=\\"button\\" class=\\"c-sf-block__actions__single\\" title=\\"Delete\\">
        <svg class=\\"icon icon-bin\\" aria-hidden=\\"true\\">
          <use href=\\"#icon-bin\\"></use>
        </svg>
      </button></div>
              </div>
              <div data-block-content=\\"\\" class=\\"c-sf-block__content\\" aria-hidden=\\"false\\">
                <div class=\\"c-sf-block__content-inner\\">
                  <div class=\\"field char_field widget-admin_auto_height_text_input fieldname-\\">
        <div class=\\"field-content\\">
          <div class=\\"input\\">
            <p name=\\"the-prefix-0-value\\" id=\\"the-prefix-0-value\\">The widget</p>
            <span></span>
          </div>
        </div>
      </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div><button type=\\"button\\" title=\\"Add\\" data-streamfield-list-add=\\"\\" class=\\"c-sf-add-button c-sf-add-button--visible\\" style=\\"display: none;\\" aria-hidden=\\"true\\">
        <i aria-hidden=\\"true\\">+</i>
      </button><div aria-hidden=\\"true\\" data-contentpath=\\"22222222-2222-2222-2222-222222222222\\" style=\\"display: none;\\">
        <input type=\\"hidden\\" name=\\"the-prefix-1-deleted\\" value=\\"1\\">
        <input type=\\"hidden\\" name=\\"the-prefix-1-order\\" value=\\"1\\">
        <input type=\\"hidden\\" name=\\"the-prefix-1-type\\" value=\\"\\">
        <input type=\\"hidden\\" name=\\"the-prefix-1-id\\" value=\\"22222222-2222-2222-2222-222222222222\\">

        <div>
          <div class=\\"c-sf-container__block-container\\">
            <div class=\\"c-sf-block\\">
              <div data-block-header=\\"\\" class=\\"c-sf-block__header c-sf-block__header--collapsible\\">
                <svg class=\\"icon icon-pilcrow c-sf-block__header__icon\\" aria-hidden=\\"true\\">
                  <use href=\\"#icon-pilcrow\\"></use>
                </svg>
                <h3 data-block-title=\\"\\" class=\\"c-sf-block__header__title\\"></h3>
                <div class=\\"c-sf-block__actions\\" data-block-actions=\\"\\">
                  <span class=\\"c-sf-block__type\\"></span>
                <button type=\\"button\\" class=\\"c-sf-block__actions__single\\" title=\\"Move up\\">
        <svg class=\\"icon icon-arrow-up\\" aria-hidden=\\"true\\">
          <use href=\\"#icon-arrow-up\\"></use>
        </svg>
      </button><button type=\\"button\\" class=\\"c-sf-block__actions__single\\" title=\\"Move down\\" disabled=\\"disabled\\">
        <svg class=\\"icon icon-arrow-down\\" aria-hidden=\\"true\\">
          <use href=\\"#icon-arrow-down\\"></use>
        </svg>
      </button><button type=\\"button\\" class=\\"c-sf-block__actions__single\\" title=\\"Duplicate\\">
        <svg class=\\"icon icon-duplicate\\" aria-hidden=\\"true\\">
          <use href=\\"#icon-duplicate\\"></use>
        </svg>
      </button><button type=\\"button\\" class=\\"c-sf-block__actions__single\\" title=\\"Delete\\">
        <svg class=\\"icon icon-bin\\" aria-hidden=\\"true\\">
          <use href=\\"#icon-bin\\"></use>
        </svg>
      </button></div>
              </div>
              <div data-block-content=\\"\\" class=\\"c-sf-block__content\\" aria-hidden=\\"false\\">
                <div class=\\"c-sf-block__content-inner\\">
                  <div class=\\"field char_field widget-admin_auto_height_text_input fieldname-\\">
        <div class=\\"field-content\\">
          <div class=\\"input\\">
            <p name=\\"the-prefix-1-value\\" id=\\"the-prefix-1-value\\">The widget</p>
            <span></span>
          </div>
        </div>
      </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div><button type=\\"button\\" title=\\"Add\\" data-streamfield-list-add=\\"\\" class=\\"c-sf-add-button c-sf-add-button--visible\\">
        <i aria-hidden=\\"true\\">+</i>
      </button></div>
      </div>"
`;

exports[`telepath: wagtail.blocks.ListBlock it renders correctly 1`] = `
"<span>
          <div class=\\"help\\">
            <div class=\\"icon-help\\">?</div>
            use <strong>a few</strong> of these
          </div>
        </span><div class=\\"c-sf-container \\">
        <input type=\\"hidden\\" name=\\"the-prefix-count\\" data-streamfield-list-count=\\"\\" value=\\"2\\">

        <div data-streamfield-list-container=\\"\\"><button type=\\"button\\" title=\\"Add\\" data-streamfield-list-add=\\"\\" class=\\"c-sf-add-button c-sf-add-button--visible\\">
        <i aria-hidden=\\"true\\">+</i>
      </button><div aria-hidden=\\"false\\" data-contentpath=\\"11111111-1111-1111-1111-111111111111\\">
        <input type=\\"hidden\\" name=\\"the-prefix-0-deleted\\" value=\\"\\">
        <input type=\\"hidden\\" name=\\"the-prefix-0-order\\" value=\\"0\\">
        <input type=\\"hidden\\" name=\\"the-prefix-0-type\\" value=\\"\\">
        <input type=\\"hidden\\" name=\\"the-prefix-0-id\\" value=\\"11111111-1111-1111-1111-111111111111\\">

        <div>
          <div class=\\"c-sf-container__block-container\\">
            <div class=\\"c-sf-block\\">
              <div data-block-header=\\"\\" class=\\"c-sf-block__header c-sf-block__header--collapsible\\">
                <svg class=\\"icon icon-pilcrow c-sf-block__header__icon\\" aria-hidden=\\"true\\">
                  <use href=\\"#icon-pilcrow\\"></use>
                </svg>
                <h3 data-block-title=\\"\\" class=\\"c-sf-block__header__title\\"></h3>
                <div class=\\"c-sf-block__actions\\" data-block-actions=\\"\\">
                  <span class=\\"c-sf-block__type\\"></span>
                <button type=\\"button\\" class=\\"c-sf-block__actions__single\\" title=\\"Move up\\" disabled=\\"disabled\\">
        <svg class=\\"icon icon-arrow-up\\" aria-hidden=\\"true\\">
          <use href=\\"#icon-arrow-up\\"></use>
        </svg>
      </button><button type=\\"button\\" class=\\"c-sf-block__actions__single\\" title=\\"Move down\\">
        <svg class=\\"icon icon-arrow-down\\" aria-hidden=\\"true\\">
          <use href=\\"#icon-arrow-down\\"></use>
        </svg>
      </button><button type=\\"button\\" class=\\"c-sf-block__actions__single\\" title=\\"Duplicate\\">
        <svg class=\\"icon icon-duplicate\\" aria-hidden=\\"true\\">
          <use href=\\"#icon-duplicate\\"></use>
        </svg>
      </button><button type=\\"button\\" class=\\"c-sf-block__actions__single\\" title=\\"Delete\\">
        <svg class=\\"icon icon-bin\\" aria-hidden=\\"true\\">
          <use href=\\"#icon-bin\\"></use>
        </svg>
      </button></div>
              </div>
              <div data-block-content=\\"\\" class=\\"c-sf-block__content\\" aria-hidden=\\"false\\">
                <div class=\\"c-sf-block__content-inner\\">
                  <div class=\\"field char_field widget-admin_auto_height_text_input fieldname-\\">
        <div class=\\"field-content\\">
          <div class=\\"input\\">
            <p name=\\"the-prefix-0-value\\" id=\\"the-prefix-0-value\\">The widget</p>
            <span></span>
          </div>
        </div>
      </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div><button type=\\"button\\" title=\\"Add\\" data-streamfield-list-add=\\"\\" class=\\"c-sf-add-button c-sf-add-button--visible\\">
        <i aria-hidden=\\"true\\">+</i>
      </button><div aria-hidden=\\"false\\" data-contentpath=\\"22222222-2222-2222-2222-222222222222\\">
        <input type=\\"hidden\\" name=\\"the-prefix-1-deleted\\" value=\\"\\">
        <input type=\\"hidden\\" name=\\"the-prefix-1-order\\" value=\\"1\\">
        <input type=\\"hidden\\" name=\\"the-prefix-1-type\\" value=\\"\\">
        <input type=\\"hidden\\" name=\\"the-prefix-1-id\\" value=\\"22222222-2222-2222-2222-222222222222\\">

        <div>
          <div class=\\"c-sf-container__block-container\\">
            <div class=\\"c-sf-block\\">
              <div data-block-header=\\"\\" class=\\"c-sf-block__header c-sf-block__header--collapsible\\">
                <svg class=\\"icon icon-pilcrow c-sf-block__header__icon\\" aria-hidden=\\"true\\">
                  <use href=\\"#icon-pilcrow\\"></use>
                </svg>
                <h3 data-block-title=\\"\\" class=\\"c-sf-block__header__title\\"></h3>
                <div class=\\"c-sf-block__actions\\" data-block-actions=\\"\\">
                  <span class=\\"c-sf-block__type\\"></span>
                <button type=\\"button\\" class=\\"c-sf-block__actions__single\\" title=\\"Move up\\">
        <svg class=\\"icon icon-arrow-up\\" aria-hidden=\\"true\\">
          <use href=\\"#icon-arrow-up\\"></use>
        </svg>
      </button><button type=\\"button\\" class=\\"c-sf-block__actions__single\\" title=\\"Move down\\" disabled=\\"disabled\\">
        <svg class=\\"icon icon-arrow-down\\" aria-hidden=\\"true\\">
          <use href=\\"#icon-arrow-down\\"></use>
        </svg>
      </button><button type=\\"button\\" class=\\"c-sf-block__actions__single\\" title=\\"Duplicate\\">
        <svg class=\\"icon icon-duplicate\\" aria-hidden=\\"true\\">
          <use href=\\"#icon-duplicate\\"></use>
        </svg>
      </button><button type=\\"button\\" class=\\"c-sf-block__actions__single\\" title=\\"Delete\\">
        <svg class=\\"icon icon-bin\\" aria-hidden=\\"true\\">
          <use href=\\"#icon-bin\\"></use>
        </svg>
      </button></div>
              </div>
              <div data-block-content=\\"\\" class=\\"c-sf-block__content\\" aria-hidden=\\"false\\">
                <div class=\\"c-sf-block__content-inner\\">
                  <div class=\\"field char_field widget-admin_auto_height_text_input fieldname-\\">
        <div class=\\"field-content\\">
          <div class=\\"input\\">
            <p name=\\"the-prefix-1-value\\" id=\\"the-prefix-1-value\\">The widget</p>
            <span></span>
          </div>
        </div>
      </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div><button type=\\"button\\" title=\\"Add\\" data-streamfield-list-add=\\"\\" class=\\"c-sf-add-button c-sf-add-button--visible\\">
        <i aria-hidden=\\"true\\">+</i>
      </button></div>
      </div>"
`;

exports[`telepath: wagtail.blocks.ListBlock setError passes error messages to children 1`] = `
"<span>
          <div class=\\"help\\">
            <div class=\\"icon-help\\">?</div>
            use <strong>a few</strong> of these
          </div>
        </span><div class=\\"c-sf-container \\">
        <input type=\\"hidden\\" name=\\"the-prefix-count\\" data-streamfield-list-count=\\"\\" value=\\"2\\">

        <div data-streamfield-list-container=\\"\\"><button type=\\"button\\" title=\\"Add\\" data-streamfield-list-add=\\"\\" class=\\"c-sf-add-button c-sf-add-button--visible\\">
        <i aria-hidden=\\"true\\">+</i>
      </button><div aria-hidden=\\"false\\" data-contentpath=\\"11111111-1111-1111-1111-111111111111\\">
        <input type=\\"hidden\\" name=\\"the-prefix-0-deleted\\" value=\\"\\">
        <input type=\\"hidden\\" name=\\"the-prefix-0-order\\" value=\\"0\\">
        <input type=\\"hidden\\" name=\\"the-prefix-0-type\\" value=\\"\\">
        <input type=\\"hidden\\" name=\\"the-prefix-0-id\\" value=\\"11111111-1111-1111-1111-111111111111\\">

        <div>
          <div class=\\"c-sf-container__block-container\\">
            <div class=\\"c-sf-block\\">
              <div data-block-header=\\"\\" class=\\"c-sf-block__header c-sf-block__header--collapsible\\">
                <svg class=\\"icon icon-pilcrow c-sf-block__header__icon\\" aria-hidden=\\"true\\">
                  <use href=\\"#icon-pilcrow\\"></use>
                </svg>
                <h3 data-block-title=\\"\\" class=\\"c-sf-block__header__title\\"></h3>
                <div class=\\"c-sf-block__actions\\" data-block-actions=\\"\\">
                  <span class=\\"c-sf-block__type\\"></span>
                <button type=\\"button\\" class=\\"c-sf-block__actions__single\\" title=\\"Move up\\" disabled=\\"disabled\\">
        <svg class=\\"icon icon-arrow-up\\" aria-hidden=\\"true\\">
          <use href=\\"#icon-arrow-up\\"></use>
        </svg>
      </button><button type=\\"button\\" class=\\"c-sf-block__actions__single\\" title=\\"Move down\\">
        <svg class=\\"icon icon-arrow-down\\" aria-hidden=\\"true\\">
          <use href=\\"#icon-arrow-down\\"></use>
        </svg>
      </button><button type=\\"button\\" class=\\"c-sf-block__actions__single\\" title=\\"Duplicate\\">
        <svg class=\\"icon icon-duplicate\\" aria-hidden=\\"true\\">
          <use href=\\"#icon-duplicate\\"></use>
        </svg>
      </button><button type=\\"button\\" class=\\"c-sf-block__actions__single\\" title=\\"Delete\\">
        <svg class=\\"icon icon-bin\\" aria-hidden=\\"true\\">
          <use href=\\"#icon-bin\\"></use>
        </svg>
      </button></div>
              </div>
              <div data-block-content=\\"\\" class=\\"c-sf-block__content\\" aria-hidden=\\"false\\">
                <div class=\\"c-sf-block__content-inner\\">
                  <div class=\\"field char_field widget-admin_auto_height_text_input fieldname-\\">
        <div class=\\"field-content\\">
          <div class=\\"input\\">
            <p name=\\"the-prefix-0-value\\" id=\\"the-prefix-0-value\\">The widget</p>
            <span></span>
          </div>
        </div>
      </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div><button type=\\"button\\" title=\\"Add\\" data-streamfield-list-add=\\"\\" class=\\"c-sf-add-button c-sf-add-button--visible\\">
        <i aria-hidden=\\"true\\">+</i>
      </button><div aria-hidden=\\"false\\" data-contentpath=\\"22222222-2222-2222-2222-222222222222\\">
        <input type=\\"hidden\\" name=\\"the-prefix-1-deleted\\" value=\\"\\">
        <input type=\\"hidden\\" name=\\"the-prefix-1-order\\" value=\\"1\\">
        <input type=\\"hidden\\" name=\\"the-prefix-1-type\\" value=\\"\\">
        <input type=\\"hidden\\" name=\\"the-prefix-1-id\\" value=\\"22222222-2222-2222-2222-222222222222\\">

        <div>
          <div class=\\"c-sf-container__block-container\\">
            <div class=\\"c-sf-block\\">
              <div data-block-header=\\"\\" class=\\"c-sf-block__header c-sf-block__header--collapsible\\">
                <svg class=\\"icon icon-pilcrow c-sf-block__header__icon\\" aria-hidden=\\"true\\">
                  <use href=\\"#icon-pilcrow\\"></use>
                </svg>
                <h3 data-block-title=\\"\\" class=\\"c-sf-block__header__title\\"></h3>
                <div class=\\"c-sf-block__actions\\" data-block-actions=\\"\\">
                  <span class=\\"c-sf-block__type\\"></span>
                <button type=\\"button\\" class=\\"c-sf-block__actions__single\\" title=\\"Move up\\">
        <svg class=\\"icon icon-arrow-up\\" aria-hidden=\\"true\\">
          <use href=\\"#icon-arrow-up\\"></use>
        </svg>
      </button><button type=\\"button\\" class=\\"c-sf-block__actions__single\\" title=\\"Move down\\" disabled=\\"disabled\\">
        <svg class=\\"icon icon-arrow-down\\" aria-hidden=\\"true\\">
          <use href=\\"#icon-arrow-down\\"></use>
        </svg>
      </button><button type=\\"button\\" class=\\"c-sf-block__actions__single\\" title=\\"Duplicate\\">
        <svg class=\\"icon icon-duplicate\\" aria-hidden=\\"true\\">
          <use href=\\"#icon-duplicate\\"></use>
        </svg>
      </button><button type=\\"button\\" class=\\"c-sf-block__actions__single\\" title=\\"Delete\\">
        <svg class=\\"icon icon-bin\\" aria-hidden=\\"true\\">
          <use href=\\"#icon-bin\\"></use>
        </svg>
      </button></div>
              </div>
              <div data-block-content=\\"\\" class=\\"c-sf-block__content\\" aria-hidden=\\"false\\">
                <div class=\\"c-sf-block__content-inner\\">
                  <div class=\\"field char_field widget-admin_auto_height_text_input fieldname- error\\">
        <div class=\\"field-content\\">
          <div class=\\"input\\">
            <p name=\\"the-prefix-1-value\\" id=\\"the-prefix-1-value\\">The widget</p>
            <span></span>
          </div>
        <p class=\\"error-message\\"><span>Not as good as the first one</span></p></div>
      </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div><button type=\\"button\\" title=\\"Add\\" data-streamfield-list-add=\\"\\" class=\\"c-sf-add-button c-sf-add-button--visible\\">
        <i aria-hidden=\\"true\\">+</i>
      </button></div>
      </div>"
`;

exports[`telepath: wagtail.blocks.ListBlock setError renders non-block errors 1`] = `
"<span>
          <div class=\\"help\\">
            <div class=\\"icon-help\\">?</div>
            use <strong>a few</strong> of these
          </div>
        </span><div class=\\"c-sf-container \\"><p class=\\"help-block help-critical\\">At least three blocks are required</p>
        <input type=\\"hidden\\" name=\\"the-prefix-count\\" data-streamfield-list-count=\\"\\" value=\\"2\\">

        <div data-streamfield-list-container=\\"\\"><button type=\\"button\\" title=\\"Add\\" data-streamfield-list-add=\\"\\" class=\\"c-sf-add-button c-sf-add-button--visible\\">
        <i aria-hidden=\\"true\\">+</i>
      </button><div aria-hidden=\\"false\\" data-contentpath=\\"11111111-1111-1111-1111-111111111111\\">
        <input type=\\"hidden\\" name=\\"the-prefix-0-deleted\\" value=\\"\\">
        <input type=\\"hidden\\" name=\\"the-prefix-0-order\\" value=\\"0\\">
        <input type=\\"hidden\\" name=\\"the-prefix-0-type\\" value=\\"\\">
        <input type=\\"hidden\\" name=\\"the-prefix-0-id\\" value=\\"11111111-1111-1111-1111-111111111111\\">

        <div>
          <div class=\\"c-sf-container__block-container\\">
            <div class=\\"c-sf-block\\">
              <div data-block-header=\\"\\" class=\\"c-sf-block__header c-sf-block__header--collapsible\\">
                <svg class=\\"icon icon-pilcrow c-sf-block__header__icon\\" aria-hidden=\\"true\\">
                  <use href=\\"#icon-pilcrow\\"></use>
                </svg>
                <h3 data-block-title=\\"\\" class=\\"c-sf-block__header__title\\"></h3>
                <div class=\\"c-sf-block__actions\\" data-block-actions=\\"\\">
                  <span class=\\"c-sf-block__type\\"></span>
                <button type=\\"button\\" class=\\"c-sf-block__actions__single\\" title=\\"Move up\\" disabled=\\"disabled\\">
        <svg class=\\"icon icon-arrow-up\\" aria-hidden=\\"true\\">
          <use href=\\"#icon-arrow-up\\"></use>
        </svg>
      </button><button type=\\"button\\" class=\\"c-sf-block__actions__single\\" title=\\"Move down\\">
        <svg class=\\"icon icon-arrow-down\\" aria-hidden=\\"true\\">
          <use href=\\"#icon-arrow-down\\"></use>
        </svg>
      </button><button type=\\"button\\" class=\\"c-sf-block__actions__single\\" title=\\"Duplicate\\">
        <svg class=\\"icon icon-duplicate\\" aria-hidden=\\"true\\">
          <use href=\\"#icon-duplicate\\"></use>
        </svg>
      </button><button type=\\"button\\" class=\\"c-sf-block__actions__single\\" title=\\"Delete\\">
        <svg class=\\"icon icon-bin\\" aria-hidden=\\"true\\">
          <use href=\\"#icon-bin\\"></use>
        </svg>
      </button></div>
              </div>
              <div data-block-content=\\"\\" class=\\"c-sf-block__content\\" aria-hidden=\\"false\\">
                <div class=\\"c-sf-block__content-inner\\">
                  <div class=\\"field char_field widget-admin_auto_height_text_input fieldname-\\">
        <div class=\\"field-content\\">
          <div class=\\"input\\">
            <p name=\\"the-prefix-0-value\\" id=\\"the-prefix-0-value\\">The widget</p>
            <span></span>
          </div>
        </div>
      </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div><button type=\\"button\\" title=\\"Add\\" data-streamfield-list-add=\\"\\" class=\\"c-sf-add-button c-sf-add-button--visible\\">
        <i aria-hidden=\\"true\\">+</i>
      </button><div aria-hidden=\\"false\\" data-contentpath=\\"22222222-2222-2222-2222-222222222222\\">
        <input type=\\"hidden\\" name=\\"the-prefix-1-deleted\\" value=\\"\\">
        <input type=\\"hidden\\" name=\\"the-prefix-1-order\\" value=\\"1\\">
        <input type=\\"hidden\\" name=\\"the-prefix-1-type\\" value=\\"\\">
        <input type=\\"hidden\\" name=\\"the-prefix-1-id\\" value=\\"22222222-2222-2222-2222-222222222222\\">

        <div>
          <div class=\\"c-sf-container__block-container\\">
            <div class=\\"c-sf-block\\">
              <div data-block-header=\\"\\" class=\\"c-sf-block__header c-sf-block__header--collapsible\\">
                <svg class=\\"icon icon-pilcrow c-sf-block__header__icon\\" aria-hidden=\\"true\\">
                  <use href=\\"#icon-pilcrow\\"></use>
                </svg>
                <h3 data-block-title=\\"\\" class=\\"c-sf-block__header__title\\"></h3>
                <div class=\\"c-sf-block__actions\\" data-block-actions=\\"\\">
                  <span class=\\"c-sf-block__type\\"></span>
                <button type=\\"button\\" class=\\"c-sf-block__actions__single\\" title=\\"Move up\\">
        <svg class=\\"icon icon-arrow-up\\" aria-hidden=\\"true\\">
          <use href=\\"#icon-arrow-up\\"></use>
        </svg>
      </button><button type=\\"button\\" class=\\"c-sf-block__actions__single\\" title=\\"Move down\\" disabled=\\"disabled\\">
        <svg class=\\"icon icon-arrow-down\\" aria-hidden=\\"true\\">
          <use href=\\"#icon-arrow-down\\"></use>
        </svg>
      </button><button type=\\"button\\" class=\\"c-sf-block__actions__single\\" title=\\"Duplicate\\">
        <svg class=\\"icon icon-duplicate\\" aria-hidden=\\"true\\">
          <use href=\\"#icon-duplicate\\"></use>
        </svg>
      </button><button type=\\"button\\" class=\\"c-sf-block__actions__single\\" title=\\"Delete\\">
        <svg class=\\"icon icon-bin\\" aria-hidden=\\"true\\">
          <use href=\\"#icon-bin\\"></use>
        </svg>
      </button></div>
              </div>
              <div data-block-content=\\"\\" class=\\"c-sf-block__content\\" aria-hidden=\\"false\\">
                <div class=\\"c-sf-block__content-inner\\">
                  <div class=\\"field char_field widget-admin_auto_height_text_input fieldname-\\">
        <div class=\\"field-content\\">
          <div class=\\"input\\">
            <p name=\\"the-prefix-1-value\\" id=\\"the-prefix-1-value\\">The widget</p>
            <span></span>
          </div>
        </div>
      </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div><button type=\\"button\\" title=\\"Add\\" data-streamfield-list-add=\\"\\" class=\\"c-sf-add-button c-sf-add-button--visible\\">
        <i aria-hidden=\\"true\\">+</i>
      </button></div>
      </div>"
`;
